// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Circle 1`] = `
<button
  className="py-2 px-4 text-md rounded-full bg-primary-500 text-white hover:bg-primary-600 disabled:bg-primary-600 active:bg-primary-700 dark:bg-primary-400 dark:hover:bg-primary-300 dark:disabled:bg-primary-300 dark:hover:bg-primary-200 rounded leading-none box-border duration-100 transition-colors ease-out font-medium cursor-pointer disabled:cursor-not-allowed focus:ring focus:ring-primary-200 focus:outline-none dark:focus:ring-primary-800"
>
  hello
</button>
`;

exports[`Storyshots Button Primary Disabled 1`] = `
<button
  className="py-3 px-5 text-lg rounded bg-primary-500 text-white hover:bg-primary-600 disabled:bg-primary-600 active:bg-primary-700 dark:bg-primary-400 dark:hover:bg-primary-300 dark:disabled:bg-primary-300 dark:hover:bg-primary-200 rounded leading-none box-border duration-100 transition-colors ease-out font-medium cursor-pointer disabled:cursor-not-allowed focus:ring focus:ring-primary-200 focus:outline-none dark:focus:ring-primary-800"
  disabled={true}
>
  hello
</button>
`;

exports[`Storyshots Button Primary Large 1`] = `
<button
  className="py-3 px-5 text-lg rounded bg-primary-500 text-white hover:bg-primary-600 disabled:bg-primary-600 active:bg-primary-700 dark:bg-primary-400 dark:hover:bg-primary-300 dark:disabled:bg-primary-300 dark:hover:bg-primary-200 rounded leading-none box-border duration-100 transition-colors ease-out font-medium cursor-pointer disabled:cursor-not-allowed focus:ring focus:ring-primary-200 focus:outline-none dark:focus:ring-primary-800"
>
  hello
</button>
`;

exports[`Storyshots Button Primary Medium 1`] = `
<button
  className="py-2 px-4 text-md rounded bg-primary-500 text-white hover:bg-primary-600 disabled:bg-primary-600 active:bg-primary-700 dark:bg-primary-400 dark:hover:bg-primary-300 dark:disabled:bg-primary-300 dark:hover:bg-primary-200 rounded leading-none box-border duration-100 transition-colors ease-out font-medium cursor-pointer disabled:cursor-not-allowed focus:ring focus:ring-primary-200 focus:outline-none dark:focus:ring-primary-800"
>
  hello
</button>
`;

exports[`Storyshots Button Primary Small 1`] = `
<button
  className="py-1.5 px-3 text-sm rounded bg-primary-500 text-white hover:bg-primary-600 disabled:bg-primary-600 active:bg-primary-700 dark:bg-primary-400 dark:hover:bg-primary-300 dark:disabled:bg-primary-300 dark:hover:bg-primary-200 rounded leading-none box-border duration-100 transition-colors ease-out font-medium cursor-pointer disabled:cursor-not-allowed focus:ring focus:ring-primary-200 focus:outline-none dark:focus:ring-primary-800"
>
  hello
</button>
`;

exports[`Storyshots Button Secondary Large 1`] = `
<button
  className="py-2 px-4 text-md rounded text-primary-500 bg-primary-100 hover:bg-primary-200 disabled:bg-primary-200 active:bg-primary-300 dark:text-primary-400 dark:bg-primary-900 dark:hover:bg-primary-800 dark:disabled:bg-primary-800 dark:active:bg-primary-700 rounded leading-none box-border duration-100 transition-colors ease-out font-medium cursor-pointer disabled:cursor-not-allowed focus:ring focus:ring-primary-200 focus:outline-none dark:focus:ring-primary-800"
>
  hello
</button>
`;

exports[`Storyshots Button Skeleton 1`] = `
<button
  className="text-md rounded text-coolGray-700 dark:text-trueGray-300 rounded leading-none box-border duration-100 transition-colors ease-out font-medium cursor-pointer disabled:cursor-not-allowed focus:ring focus:ring-primary-200 focus:outline-none dark:focus:ring-primary-800"
>
  hello
</button>
`;

exports[`Storyshots Button Tiny Letter 1`] = `
<button
  className="py-1.5 px-3 text-sm rounded-full bg-primary-500 text-white hover:bg-primary-600 disabled:bg-primary-600 active:bg-primary-700 dark:bg-primary-400 dark:hover:bg-primary-300 dark:disabled:bg-primary-300 dark:hover:bg-primary-200 rounded leading-none box-border duration-100 transition-colors ease-out font-medium cursor-pointer disabled:cursor-not-allowed focus:ring focus:ring-primary-200 focus:outline-none dark:focus:ring-primary-800"
>
  a
</button>
`;

exports[`Storyshots Button Wash Large 1`] = `
<button
  className="py-2 px-4 text-md rounded text-coolGray-700 bg-coolGray-100 hover:bg-coolGray-200 disabled:bg-coolGray-200 active:bg-coolGray-300 dark:text-trueGray-300 dark:bg-trueGray-900 dark:hover:bg-trueGray-800 dark:disabled:bg-trueGray-800 dark:active:bg-trueGray-700 rounded leading-none box-border duration-100 transition-colors ease-out font-medium cursor-pointer disabled:cursor-not-allowed focus:ring focus:ring-primary-200 focus:outline-none dark:focus:ring-primary-800"
>
  hello
</button>
`;
